Update Readme to indication repository is archived

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+This repository has been archived.
+
+The ITK module template is now located in theInsight Software Consortium organization.
+
+https://github.com/InsightSoftwareConsortium/ITKModuleTemplate 
+
+
 General
 =======
 
